--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,43 +1,50 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
+# Nombre del Action
 name: Python application
 
+# Call de las actions en push y pull request event
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
+# Permisos del action en ejecución
 permissions:
   contents: read
 
+# Tareas a realizar
 jobs:
   build:
 
+    # Plataforma
     runs-on: ubuntu-latest
 
+    # Variables de entorno (?)
     strategy:
       matrix:
         python-version: [3.11, 3.12]
 
+    # Pasos secuenciales de las tareas
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: Set up Python 3.12/3.11 # Setup de python
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install dependencies # Instala dependencias
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+    - name: Lint with flake8 # Lint de flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test with pytest # Ejecutar tests
       run: |
         python -m unittest tests.test
